# projekt-ok

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
data/: gen.py
include/: tsp_greedy_solver.hpp  tsp_sa_solver.hpp  tsp_types.hpp  tsp_utils.hpp
minizinc/: tsp_model.mzn
python/: tsp_gen.py  tsp_model_run.py  tsp_model_test.py  tsp_mzn_plot.py  tsp_test_plot.py  tsp_test_run.py  tsp_to_json.py  tsp_utils.py  tsp_validate.py
src/: main.cpp  tsp_greedy_solver.cpp  tsp_sa_solver.cpp  tsp_utils.cpp
